--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "shamim-reza",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   },
