--- a/.eslintrc
+++ b/.eslintrc
@@ -13,12 +13,13 @@
   ],
 
   "rules": {
-    "no-unused-vars": "error",
+    "@typescript-eslint/no-unused-vars": "error",
     "no-console": "error",
-    "no-undef":"error",
-    "no-unused-expressions": "error",
+    // "no-undef": "error",
+    "@typescript-eslint/no-unused-expressions": "error",
     "no-unreachable": "error",
-    "consistent-type-definitions": ["error", "type"]
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
+    // "consistent-type-definitions": "error"
   },
 
   "env": {
@@ -26,3 +27,4 @@
     "es2021": true
   }
 }
+
