--- a/.eslintrc
+++ b/.eslintrc
@@ -14,17 +14,20 @@
 
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
-    "no-console": "error",
-    // "no-undef": "error",
+    "no-console": "warn",
+    "no-undef": "error",
     "@typescript-eslint/no-unused-expressions": "error",
     "no-unreachable": "error",
     "@typescript-eslint/consistent-type-definitions": ["error", "type"]
-    // "consistent-type-definitions": "error"
   },
 
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "node": true
+  },
+  "globals": {
+    "process": "readonly"
   }
 }
 
